@@ -5,6 +5,12 @@ Version 0.1 alpha2(in development)
 common:
 	* Fixed blasint undefined bug in <cblas.h> file. Other software 
 	  could include this header successfully(Refs issue #13 on github)
+	* Fixed the SEGFAULT bug on 64 cores. On SMP server, the number 
+	  of CPUs or cores should be less than or equal to 64.(Refs issue #14 
+	  on github)
+	* Support "void goto_set_num_threads(int num_threads)" and "void
+	  openblas_set_num_threads(int num_threads)" when USE_OPENMP=1
+
 x86/x86_64:
 	* 
 MIPS64:
